# orocos_kinematics_dynamics

armstrong_kdl/: CMakeLists.txt  armstrong_kdl-config.cmake.in  armstrong_kdl.pc.in  manifest.xml
armstrong_kdl/debian/: changelog  control  liborocos-kdl-dev.install  liborocos-kdl.install  rules
armstrong_kdl/doc/: CMakeLists.txt
armstrong_kdl/doc/tex/: UserManual.tex
armstrong_kdl/examples/: CMakeLists.txt  README  chainiksolverpos_lma_demo.cpp  geometry.cpp  trajectory_example.cpp
armstrong_kdl/models/: CMakeLists.txt  kukaLWR_DHnew.cpp  kukaLWRtestDHnew.cpp  kukaLWRtestHCG.cpp  models.hpp  puma560.cpp  puma560test.cpp
armstrong_kdl/src/: CMakeLists.txt  articulatedbodyinertia.cpp  articulatedbodyinertia.hpp  chain.cpp  chain.hpp  chaindynparam.cpp  chaindynparam.hpp  chainexternalwrenchestimator.cpp  chainexternalwrenchestimator.hpp  chainfdsolver.hpp  chainfdsolver_recursive_newton_euler.cpp  chainfdsolver_recursive_newton_euler.hpp  chainfksolver.hpp  chainfksolverpos_recursive.cpp  chainfksolverpos_recursive.hpp  chainfksolvervel_recursive.cpp  chainfksolvervel_recursive.hpp  chainhdsolver_vereshchagin.cpp  chainhdsolver_vereshchagin.hpp  chainidsolver.hpp  chainidsolver_recursive_newton_euler.cpp  chainidsolver_recursive_newton_euler.hpp  chainidsolver_vereshchagin.cpp  chainidsolver_vereshchagin.hpp  chainiksolver.hpp  chainiksolver_vel_mimic_svd.cpp  chainiksolver_vel_mimic_svd.hpp  chainiksolverpos_lma.cpp  chainiksolverpos_lma.hpp  chainiksolverpos_nr.cpp  chainiksolverpos_nr.hpp  chainiksolverpos_nr_jl.cpp  chainiksolverpos_nr_jl.hpp  chainiksolvervel_pinv.cpp  chainiksolvervel_pinv.hpp  chainiksolvervel_pinv_givens.cpp  chainiksolvervel_pinv_givens.hpp  chainiksolvervel_pinv_nso.cpp  chainiksolvervel_pinv_nso.hpp  chainiksolvervel_wdls.cpp  (+95 more)
armstrong_kdl/tests/: CMakeLists.txt  framestest.cpp  framestest.hpp  inertiatest.cpp  iotest.cpp  jacobiandottest.cpp  jacobiandoubletests.cpp  jacobiandoubletests.hpp  jacobianframetests.cpp  jacobianframetests.hpp  jacobiantest.cpp  jacobiantest.hpp  jacobiantests.cpp  jacobiantests.hpp  kinfamtest.cpp  kinfamtest.hpp  rallnumbertest.cpp  rframestest.cpp  serialchaintest.cpp  solvertest.cpp  solvertest.hpp  toolkittest.cpp  treeinvdyntest.cpp  treeinvdyntest.hpp  velocityprofiletest.cpp  zxxzxztest.cpp
orocos_kdl/src/: chainiksolver_vel_mimic_svd.cpp  chainiksolver_vel_mimic_svd.hpp  joint_mimic.hpp
python_armstrong_kdl/: CMakeLists.txt
python_armstrong_kdl/PyKDL/: PyKDL.cpp  dynamics.cpp  frames.cpp  framevel.cpp  kinfam.cpp
python_armstrong_kdl/doc/: conf.py
python_orocos_kdl/PyKDL/: kinfam.cpp
(+22 files in other folders)
