OPTION(BUILD_MODELS "Build models for some well known robots" FALSE)

IF(BUILD_MODELS)
  
  ADD_LIBRARY(armstrong-kdl-models SHARED puma560.cpp kukaLWR_DHnew.cpp) 
  INCLUDE_DIRECTORIES(${PROJ_SOURCE_DIR}/src ${PROJ_BINARY_DIR}/src)
  SET_TARGET_PROPERTIES( armstrong-kdl-models PROPERTIES
    SOVERSION "${KDL_VERSION_MAJOR}.${KDL_VERSION_MINOR}"
    VERSION "${KDL_VERSION}"
    COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD} ${KDL_CFLAGS}"
    INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}"
    PUBLIC_HEADER models.hpp)
  TARGET_LINK_LIBRARIES(armstrong-kdl-models armstrong-kdl)

  export(TARGETS armstrong-kdl-models APPEND
  FILE "${PROJECT_BINARY_DIR}/ARMstrongKDLTargets.cmake")

  INSTALL( TARGETS armstrong-kdl-models
      EXPORT ARMstrongKDLTargets
      ARCHIVE DESTINATION lib${LIB_SUFFIX}
      LIBRARY DESTINATION lib${LIB_SUFFIX}
      PUBLIC_HEADER DESTINATION include/kdl
  )

ENDIF(BUILD_MODELS)

INCLUDE(CMakeDependentOption)
CMAKE_DEPENDENT_OPTION(BUILD_MODELS_DEMO "Build demo for some of the models" OFF "BUILD_MODELS" OFF)  
IF(BUILD_MODELS_DEMO)
  ADD_EXECUTABLE(p560test puma560test.cpp)
  TARGET_LINK_LIBRARIES(p560test armstrong-kdl-models)
  SET_TARGET_PROPERTIES( p560test PROPERTIES
    COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD} ${KDL_CFLAGS}")

  ADD_EXECUTABLE(kukaLWRtestDHnew kukaLWRtestDHnew.cpp)
  TARGET_LINK_LIBRARIES(kukaLWRtestDHnew armstrong-kdl-models)
  SET_TARGET_PROPERTIES( kukaLWRtestDHnew PROPERTIES
    COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD} ${KDL_CFLAGS}")

  ADD_EXECUTABLE(kukaLWRtestHCG kukaLWRtestHCG.cpp)
  TARGET_LINK_LIBRARIES(kukaLWRtestHCG armstrong-kdl-models)
  SET_TARGET_PROPERTIES( kukaLWRtestHCG PROPERTIES
    COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD} ${KDL_CFLAGS}")

ENDIF(BUILD_MODELS_DEMO)